<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.coms309.efficiency_coms309_iastate.AboutActivity" >
    

	<ImageView 
	    android:id="@+id/cyclones_logo"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:src="@drawable/cyclones"
	    android:layout_below="@+id/group_names_title"
	    android:contentDescription="@string/cyclones_logo"
	    android:layout_marginTop="25dp"	
	    />  
	    
	<TextView
	    android:id="@+id/group_names"
        android:text="@string/group_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/group_names_title"
        android:layout_marginLeft="10dp"
        />
	
	<TextView
	    android:id="@+id/group_names_title"
        android:text="@string/group_names_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
	     
</RelativeLayout>
